--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,37 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#009688"
     android:visibility="visible"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/Poputki"
-        android:layout_width="180dp"
-        android:layout_height="44dp"
+        android:layout_width="214dp"
+        android:layout_height="58dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:background="#CDDC39"
         android:text="@string/Pop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.069"
+        app:layout_constraintHorizontal_bias="0.541"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976"
+        app:layout_constraintVertical_bias="0.716"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/Settings"
-        android:layout_width="180dp"
-        android:layout_height="44dp"
+        android:layout_width="215dp"
+        android:layout_height="59dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:background="#CDDC39"
         android:text="@string/Set"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.93"
+        app:layout_constraintHorizontal_bias="0.451"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976"
+        app:layout_constraintVertical_bias="0.845"
         tools:ignore="MissingConstraints" />
 
     <Spinner
@@ -45,5 +48,5 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.022"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="1dp" />
+        tools:layout_editor_absoluteX="-16dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
