--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="section_label" type="id" />
+    <item name="action_FirstFragment_to_SecondFragment" type="id" />
+    <item name="action_SecondFragment_to_FirstFragment" type="id" />
 </resources>
